{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "7c59d7d3-7148-4c5d-9120-84f0c94430d1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "549aefdb-4373-4904-bd1d-eb938d252616",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "4ec0fea6-f6a9-42a5-84f0-34f2f6e1ed5c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "2a8e8db3-d90f-403a-b09f-ecce5ad150e2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "95c9e610-3e60-4f4a-b686-7f7ffaa3e58c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "86e6fd0c-88d7-4560-b925-c875f3924a2c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ffca6548-929e-4de6-a88d-3cdcac679b5d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fb9bdc67-1e43-455e-ae08-d5fc6956d818",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3d0c59c9-0706-414f-9508-46e9b4dd2163",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e0eb9ffc-3774-4945-8d5d-696e34b9b207",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "791f1a57-679d-4eb9-91e9-87557352f6c8",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}